assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Righteous&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

#header {
    background: rgb(0,0,0);
    background: linear-gradient(180deg, rgba(0,0,0,1) 55%, rgba(0,0,0,0) 100%);}

body {
    color: #FFF;
    background-color: #000;
    font-family: 'Comfortaa', sans-serif;
}

h1 {
    font-family: 'Righteous', monospace;
}

main {
    margin-top: 20vh;
}

form {
    display: flex;
    margin-top: 5vh;
}

form input {
    flex-grow: 1;
    background-color: transparent;
    color: #FFF;
}

.warning::placeholder {
    color: darkred;
}

.button {
    width: 40px;
    height: 80%;
    align-self: center;
    text-align: center;
    font-size: 1rem;
    text-shadow: 0 0 3px #797979;
    --bs-btn-hover-color: var(--bs-white);

}

.task-button {
}

.task-button-cont {
    display: flex;
    position: relative;
    /* flex-grow: 0; */
    justify-content: flex-end;
    flex-direction: column;
    gap: 12px;
    padding-left: 12px;
}

.addNewTaskBtn-LOW {
    z-index: 3;
}

.addNewTaskBtn-MED {
    z-index: 2;
    color: #FFF;
    /* position: absolute;
    left: 0;
    transition: left 0.5s ease-out, bottom 0.5s ease-out; */
}

.addNewTaskBtn-HIG {
    z-index: 1;
    /* position: absolute;
    left: 0;
    transition: left 0.5s ease-out, top 0.5s ease-out; */
}

/* .task-button-cont:hover .addNewTaskBtn-MED {
    left: 52px;
    bottom: 30px;
}

.task-button-cont:hover .addNewTaskBtn-HIG {
    left: 52px;
    top: 30px;
} */

/* --------------- TASK LISTS --------------- */

.task-list {
    min-height: 15vh;
    list-style-type: none;
    padding: 10px;
    /* background-color: #13191b; */
    background: linear-gradient(180deg, rgba(19, 25, 27,1) 0%, rgba(19, 25, 27,0) 100%);
    border-radius: var(--bs-border-radius-lg);
    /* border: 2px solid #253237; */
    border-style: solid;
    border-width: 2px;
    border-image-source: linear-gradient(180deg, rgba(37,50,55,1) 0%, rgba(37,50,55,0) 100%);
    border-image-slice: 1;
    background-clip: padding-box;}

.list-item {
    display: flex;
    margin-bottom: .5rem;
    transition: transform 0.5s ease-out, opacity 0.5s ease-out; /* Smooth slide-in and out effect */
    
}

.task-effect-in {
    transform: translateY(-100%); /* Start down from top of screem */
    opacity: 0;
}

.task-effect-in.effect-static {
    transform: translateY(0);
    opacity: 1;
}

.task-effect-out {
    transform: translateY(-100%); /* Slide off top of screen */
    opacity: 0;

}

.task-list li {
    border-radius: var(--bs-border-radius-lg);
    padding: .5rem .75rem;
    font-size: 1rem;
    flex-grow: 1;
}

.task-hi li {
    border: 1px solid #dc3545;
}

.task-md li {
    border: 1px solid #ffc107;
}

.task-lw li {
    border: 1px solid #198754;
}

.task-comp li {
    border: 1px solid #FFF;
}

@media screen and (min-width: 576px) {
    .task-button-cont {
        flex-direction: row;
    }
    
}

